--- a/web/themes/custom/new_structure_takeda/scss/style.scss
+++ b/web/themes/custom/new_structure_takeda/scss/style.scss
@@ -27,7 +27,7 @@ html{
 
 body {
     background: $white;
-    font-family: 'PraxisLTLight';
+    font-family: 'PraxisLTLight',"Praxis LT Light",sans-serif;
 }
 .container-fluid{
     padding-right: 0 !important;
