--- a/web/themes/custom/new_structure_takeda/scss/typography.scss
+++ b/web/themes/custom/new_structure_takeda/scss/typography.scss
@@ -1,19 +1,32 @@
 /* TYPOGRAPHY */
-@font-face{
-    font-family: 'PraxisLTBold';
-    src: url('../fonts/PraxisLTBold/PraxisLTBold.TTF')
+@font-face {
+  font-family: "Praxis LT Light";
+  src: url("//db.onlinewebfonts.com/t/f08c385816b14ef9bd4254447c059b7a.eot");
+  src: url("//db.onlinewebfonts.com/t/f08c385816b14ef9bd4254447c059b7a.eot?#iefix") format("embedded-opentype"),
+  url("//db.onlinewebfonts.com/t/f08c385816b14ef9bd4254447c059b7a.woff2") format("woff2"),
+  url("//db.onlinewebfonts.com/t/f08c385816b14ef9bd4254447c059b7a.woff") format("woff"),
+  url("//db.onlinewebfonts.com/t/f08c385816b14ef9bd4254447c059b7a.ttf") format("truetype"),
+  url("//db.onlinewebfonts.com/t/f08c385816b14ef9bd4254447c059b7a.svg#Praxis LT Light") format("svg");
 }
-@font-face{
-    font-family: 'PraxisLTRegular';
-    src: url('../fonts/PraxisLTRegular/PraxisLTRegular.TTF')
+
+@font-face {
+  font-family: 'PraxisLTBold';
+  src: url('../fonts/PraxisLTBold/PraxisLTBold.TTF')
 }
-@font-face{
-    font-family: 'PraxisLTLight';
-    src: url('../fonts/PraxisLTLight/PraxisLTLight.TTF')
+
+@font-face {
+  font-family: 'PraxisLTRegular';
+  src: url('../fonts/PraxisLTRegular/PraxisLTRegular.TTF')
 }
-@font-face{
-    font-family: 'PraxisLTSemibold';
-    src: url('../fonts/PraxisLTSemibold/PraxisLTSemibold.TTF')
+
+@font-face {
+  font-family: 'PraxisLTLight';
+  src: url('../fonts/PraxisLTLight/PraxisLTLight.TTF')
+}
+
+@font-face {
+  font-family: 'PraxisLTSemibold';
+  src: url('../fonts/PraxisLTSemibold/PraxisLTSemibold.TTF')
 }
 
 /* Google Fonts */
