--- a/web/themes/custom/new_structure_takeda/scss/blocks/_find-resources.scss
+++ b/web/themes/custom/new_structure_takeda/scss/blocks/_find-resources.scss
@@ -15,7 +15,7 @@
         top: -219px;
     }
         .field--name-field-title-info{
-            font-family: 'PraxisLTSemibold';
+            font-family: 'PraxisLTSemibold',"Praxis LT Semibold",sans-serif;
             font-size: 20px;
             text-align: center;
 
