--- a/web/themes/custom/new_structure_takeda/templates/content/node.html.twig
+++ b/web/themes/custom/new_structure_takeda/templates/content/node.html.twig
@@ -64,6 +64,7 @@
 {%
   set classes = [
     'node',
+    'container',
     'node--type-' ~ node.bundle|clean_class,
     node.isPromoted() ? 'node--promoted',
     node.isSticky() ? 'node--sticky',
