--- a/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
+++ b/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
@@ -25,11 +25,11 @@
                         <h3 id="rare-diseases" class="landing-title" rel-data="gr-landing">{{ 'Rare <br /> diseases'|t }}</h3>
                     <div class="landing-sites closed">
                         <div class="site-description">{{ 'Immunology & HAE'|t }}</div>
-                            <div id="hae" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Hereditary angioedema (HAE)'|t }}</a></div>
+                            <div id="hae" class="site-name disabled"><a href="{{ url('<front>') }}" >{{ 'Hereditary angioedema (HAE)'|t }}</a></div>
                         <div class="site-description">{{ 'Haematology'|t }}</div>
-                            <div id="hemo" class="site-name"><a href="{{ url('<front>') }}" >{{ 'Hemophilia A'|t }}</a></div>
+                            <div id="hemo" class="site-name disabled"><a href="{{ url('<front>') }}" >{{ 'Hemophilia A'|t }}</a></div>
                         <div class="site-description">{{ 'Rare metabolic diseases'|t }}</div>
-                            <div id="mf" class="site-name"><a href="{{ url('<front>') }}" onclick="return false">{{ 'Morbus Fabry'|t }}</a></div>
+                            <div id="mf" class="site-name disabled"><a href="#">{{ 'Morbus Fabry'|t }}</a></div>
                     </div>
                 </div>
                 <!--                 General Practice block                  -->
