--- a/web/themes/custom/new_structure_takeda/scss/blocks/_footer.scss
+++ b/web/themes/custom/new_structure_takeda/scss/blocks/_footer.scss
@@ -2,6 +2,9 @@
   min-height: 100vh;
   position: relative;
   padding-bottom: 93px;
+  @media (max-width: 575px){
+    padding-bottom: 151px;
+  }
 }
 footer.site-footer {
   position: absolute;
@@ -16,6 +19,7 @@ footer.site-footer {
     display: flex;
     @include small-mobile {
       flex-direction: column;
+      padding-top: 1rem;
     }
 
     .footer-info {
@@ -34,8 +38,7 @@ footer.site-footer {
         text-align: right;
         @include small-mobile {
           text-align: center;
-          margin-bottom: 0;
-          margin-top: 0;
+          margin: 0 auto;
         }
 
         .content {
@@ -89,6 +92,10 @@ footer.site-footer {
       text-align: center;
       display: inline-block;
       float: none;
+      margin: 1rem 0 0;
+      .content{
+        padding: 0;
+      }
       @include small-mobile {
         order: 0;
         margin: 0 auto;
