--- a/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
+++ b/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
@@ -6,17 +6,17 @@
                 <div id="onco-landing" class="landing col-lg-3 col-md-6 col-sm-6 col-12">
                     <h3 id="oncology" class="landing-title" rel-data="gastro-landing">{{ 'Oncology'|t }}</h3>
                     <div class="landing-sites closed">
-                        <div id="mm-hcp" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/mm/en" >{{ 'Multiple Myeloma'|t }}</a></div>
-                        <div id="hl-hcp" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/hl" >{{ 'Hodkin’s Lymphoma'|t }}</a></div>
-                        <div id="alunbrig" class="site-name"><a href="http://takeda-oncology.takeda.antosh.co/ALKNSCLC/" >{{ 'ALK+ NSCLC'|t }}</a></div>
+                        <div id="mm-hcp" class="site-name"><a href="{{ mmhcp }}" >{{ 'Multiple Myeloma'|t }}</a></div>
+                        <div id="hl-hcp" class="site-name disabled"><a href="{{ url('<front>') }}" >{{ 'Hodkin’s Lymphoma'|t }}</a></div>
+                        <div id="alunbrig" class="site-name"><a href="{{ alunbrig }}" >{{ 'ALK+ NSCLC'|t }}</a></div>
                     </div>
                 </div>
                 <!--                 Gastroenterology block                  -->
                 <div id="gastro-landing" class="landing col-lg-3 col-md-6 col-sm-6 col-12">
                         <h3 id="gastro" class="landing-title" rel-data="onco-landing">{{ 'Gastro- <br/> enterology'|t }}</h3>
                     <div class="landing-sites closed">
-                        <div id="alofisel" class="site-name"><a href="http://takeda-gastroenterology.takeda.antosh.co/alofisel/" >{{ 'Complex Perianal Fistulae'|t }} </a></div>
-                        <div id="entyvio" class="site-name"><a href="http://takeda-gastroenterology.takeda.antosh.co/entyvio/" >{{ 'Inflammaroty Bowel Disease'|t }}</a></div>
+                        <div id="alofisel" class="site-name"><a href="{{ alofisel }}" >{{ 'Complex Perianal Fistulae'|t }} </a></div>
+                        <div id="entyvio" class="site-name"><a href="{{ entyvio }}" >{{ 'Inflammaroty Bowel Disease'|t }}</a></div>
                     </div>
                 </div>
             
@@ -25,7 +25,7 @@
                         <h3 id="rare-diseases" class="landing-title" rel-data="gr-landing">{{ 'Rare <br /> diseases'|t }}</h3>
                     <div class="landing-sites closed">
                         <div class="site-description">{{ 'Immunology & HAE'|t }}</div>
-                            <div id="hae" class="site-name disabled"><a href="{{ url('<front>') }}" >{{ 'Hereditary angioedema (HAE)'|t }}</a></div>
+                            <div id="hae" class="site-name"><a href="{{ takhzyro }}" >{{ 'Hereditary angioedema (HAE)'|t }}</a></div>
                         <div class="site-description">{{ 'Haematology'|t }}</div>
                             <div id="hemo" class="site-name disabled"><a href="{{ url('<front>') }}" >{{ 'Hemophilia A'|t }}</a></div>
                         <div class="site-description">{{ 'Rare metabolic diseases'|t }}</div>
@@ -36,7 +36,7 @@
                 <div id="gr-landing" class="landing col-lg-3 col-md-6 col-sm-6 col-12">
                         <h3 id="general-practional" class="landing-title" rel-data="rare-landing">{{ 'General <br /> practice'|t }}</h3>
                     <div class="landing-sites closed">
-                        <div id="reflux" class="site-name"><a href="http://reflux.takeda.antosh.co/" >{{ 'Reflux'|t }}</a></div>
+                        <div id="reflux" class="site-name"><a href="{{ reflux }}" >{{ 'Reflux'|t }}</a></div>
                     </div>
                 </div>
 
