Setting up adynovi site and make it active

--- a/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
+++ b/web/themes/custom/new_structure_takeda/templates/custom_templates/_takeda-landings.html.twig
@@ -27,7 +27,7 @@
                         <div class="site-description">{{ 'Immunology & HAE'|t }}</div>
                             <div id="hae" class="site-name"><a href="{{ takhzyro }}" >{{ 'Hereditary angioedema (HAE)'|t }}</a></div>
                         <div class="site-description">{{ 'Haematology'|t }}</div>
-                            <div id="hemo" class="site-name disabled"><a href="{{ url('<front>') }}" >{{ 'Hemophilia A'|t }}</a></div>
+                            <div id="hemo" class="site-name"><a href="{{ adynovi }}" >{{ 'Hemophilia A'|t }}</a></div>
                         <div class="site-description">{{ 'Rare metabolic diseases'|t }}</div>
                             <div id="mf" class="site-name disabled"><a href="#">{{ 'Morbus Fabry'|t }}</a></div>
                     </div>
